# DocBot

./: docker-compose.yml  package.json
apps/backend/: database.py  main.py  pyproject.toml  schema.py  utils.py
apps/web/: components.json  middleware.ts  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/[session_id]/: page.tsx
apps/web/app/components/: chat-interface.tsx  pdf-info-panel.tsx  typing-indicator.tsx  upload-card.tsx
apps/web/app/lib/: auth.ts  config.ts
apps/web/app/store/: session-store.ts
