[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.37.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.34.0",
]
